<resources>
    <string name="app_name">OffTrail</string>
    <string name="carregando">Carregando..</string>
    <string name="logout">Sair</string>
    <string name="edt_login">Entre com o login</string>
    <string name="edt_senha">Entre com a senha</string>
    <string name="title_activity_principal">OffTrail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_salvar">Save</string>
    <string name="btn_cancelar">Cancel</string>
    <string name="edt_nometrilheiro">Tricycle name</string>
    <string name="edt_idadetrilheiro">Tricycle age</string>
    <string name="edt_salvar_prefe">Alterar</string>
    <string name="versao">Version 1.0</string>
</resources>
